syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "dnf/proto/v1;miscdatav1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "MiscDataTypesProto";

// 自定义数据
message CustomData {
  uint32 type = 1;        // 类型
  uint64 senderguid = 2;  // 发送者GUID
  int32 iValue = 3;       // 整数值
  float fValue = 4;       // 浮点数值
}

// 怪物经验信息
message MonsterExp {
  int32 playercount = 1;  // 玩家数量
  uint64 charguid = 2;    // 角色GUID
  int32 exp = 3;          // 经验值
}

// 隐藏聊天信息
message HiddenChattingInfo {
  int32 type = 1;                 // 类型
  uint64 charguid = 2;            // 角色GUID
  repeated int64 indexes = 3;  // 索引列表
}
