syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "dnf/proto/v1;userv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "UserInfoProto";

// 用户信息
message UserInfo {
  uint64 charguid = 1;              // 角色GUID
  int32 job = 2;                    // 职业
  int32 growtype = 3;               // 成长类型
  int32 secgrowtype = 4;            // 次要成长类型
  int32 team_type = 5;              // 队伍类型
  int32 world = 6;                  // 世界
  int32 level = 7;                  // 等级
  string name = 8;                  // 名称
  string profile_url = 9;            // 头像URL
  string profile_name = 10;          // 头像名称
  int32 character_frame = 11;        // 角色边框
  int32 rank = 12;                   // 排名
}

// 用户状态响应
message ResUserStatus {
  int32 status = 1;                  // 状态码
  string message = 2;                // 状态消息
}

// 用户报告响应
message ResUserReport {
  int32 error = 1;                   // 错误码
  string message = 2;                // 错误消息
}

// 更新反作弊分数
message UpdateAntievilScore {
  int32 score = 1;                   // 分数
}

// 更新反作弊分数1
message UpdateAntievilScore1 {
  int32 score = 1;                   // 分数
}

// 腾讯信用分信息
message ResTencentCreditscoreInfo {
  int32 score = 1;                   // 信用分
  string message = 2;                // 消息
}

// 称号列表
message ResTitleList {
  repeated int32 titles = 1;         // 称号ID列表
}

// 赛季通行证信息
message ResSeasonPassInfo {
  int32 level = 1;                   // 等级
  int32 exp = 2;                     // 经验值
}

// 验证授权响应
message ResVerificationAuth {
  int32 error = 1;                   // 错误码
  string url = 2;                    // 验证URL
}

// 验证完成响应
message ResVerificationFinish {
  int32 error = 1;                   // 错误码
  string message = 2;                // 完成消息
}
